--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: default
 title: "Publications"
 permalink: /publications/
-author_profile: true
+<!-- author_profile: true -->
 ---
 
 {% if site.author.googlescholar %}
