--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: default
 title: "Talks and presentations"
 permalink: /talks/
-author_profile: true
+<!-- author_profile: true -->
 ---
 
 {% if site.talkmap_link == true %}
