--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -1,8 +1,8 @@
 ---
-layout: archive
+layout: default
 permalink: /year-archive/
 title: "Blog posts"
-author_profile: true
+<!-- author_profile: true -->
 redirect_from:
   - /wordpress/blog-posts/
 ---
